--- a/main.html
+++ b/main.html
@@ -4,10 +4,27 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<h1>Welcome to Accio Jobs!</h1>
+	<img height="300px" src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" />
+		
+	<p>
+		5 software program developer profession paths
+	</p>
+	<ul role="list">
+		<li role="listitem">Cloud development</li>
+		<li role="listitem">Desktop development</li>
+		<li role="listitem">Video Sport development</li>
+		<li role="listitem">Mobile development</li>
+		<li role="listitem">Web development</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
